--- a/acp-cli/pyproject.toml
+++ b/acp-cli/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 
@@ -25,7 +26,7 @@ acp = "acp_cli.main:app"
 # The CI workflow bundles all modules into acp_cli/ before publishing
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 # CLI dependencies
 typer = ">=0.12,<1.0"
 rich = "^13.7"
@@ -46,6 +47,12 @@ acp-schema = {path = "../acp-schema", develop = true}
 acp-mcp = {path = "../acp-mcp", develop = true}
 acp-compiler = {path = "../acp-compiler", develop = true}
 acp-runtime = {path = "../acp-runtime", develop = true}
+# Test and lint dependencies
+pytest = "^8.0"
+pytest-asyncio = "^0.24"
+pytest-cov = "^4.1"
+ruff = "^0.8"
+mypy = "^1.8"
 
 [build-system]
 requires = ["poetry-core"]
