--- a/acp-schema/pyproject.toml
+++ b/acp-schema/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
 
@@ -19,13 +20,16 @@ classifiers = [
 "Repository" = "https://github.com/acp-team/acp"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 pydantic = "^2.5"
 pyyaml = "^6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
 pytest-asyncio = "^0.24"
+pytest-cov = "^4.1"
+ruff = "^0.8"
+mypy = "^1.8"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
