--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,114 +3,48 @@ name: Release
 on:
   push:
     tags:
-      - "acp-*-v*"
+      - "v*"
 
 permissions:
   contents: write
-  id-token: write
 
 jobs:
-  release:
-    name: Build and Publish
+  create-release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
-    environment: pypi
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Parse tag to get package info
-        id: parse-tag
+      - name: Parse version from tag
+        id: version
         run: |
           TAG="${GITHUB_REF#refs/tags/}"
+          VERSION="${TAG#v}"
           echo "tag=$TAG" >> $GITHUB_OUTPUT
-          
-          # Extract package name and version from tag (e.g., acp-schema-v1.0.0)
-          # Pattern: acp-<package>-v<version>
-          if [[ $TAG =~ ^(acp-[a-z]+)-v(.+)$ ]]; then
-            PACKAGE="${BASH_REMATCH[1]}"
-            VERSION="${BASH_REMATCH[2]}"
-            echo "package=$PACKAGE" >> $GITHUB_OUTPUT
-            echo "version=$VERSION" >> $GITHUB_OUTPUT
-            echo "Detected package: $PACKAGE, version: $VERSION"
-          else
-            echo "Error: Tag '$TAG' does not match expected pattern 'acp-<package>-v<version>'"
-            exit 1
-          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Creating release for acp-cli version: $VERSION"
 
       - name: Verify version in pyproject.toml
         run: |
-          PACKAGE="${{ steps.parse-tag.outputs.package }}"
-          VERSION="${{ steps.parse-tag.outputs.version }}"
-          
-          TOML_VERSION=$(grep -Po '(?<=^version = ")[^"]*' "$PACKAGE/pyproject.toml")
+          VERSION="${{ steps.version.outputs.version }}"
+          TOML_VERSION=$(grep -Po '(?<=^version = ")[^"]*' "acp-cli/pyproject.toml")
           
           if [ "$TOML_VERSION" != "$VERSION" ]; then
             echo "Error: Version mismatch!"
             echo "  Tag version: $VERSION"
             echo "  pyproject.toml version: $TOML_VERSION"
-            echo "Please update the version in $PACKAGE/pyproject.toml before tagging."
+            echo "Please update the version in acp-cli/pyproject.toml before tagging."
             exit 1
           fi
           
           echo "Version verified: $VERSION"
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: "1.8.2"
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
-      - name: Install dependencies for dependent packages
-        run: |
-          PACKAGE="${{ steps.parse-tag.outputs.package }}"
-          
-          # Install dependencies based on package hierarchy
-          case $PACKAGE in
-            acp-schema)
-              # No dependencies
-              ;;
-            acp-compiler)
-              cd acp-schema && poetry install --no-interaction && cd ..
-              ;;
-            acp-mcp)
-              cd acp-schema && poetry install --no-interaction && cd ..
-              ;;
-            acp-runtime)
-              cd acp-schema && poetry install --no-interaction && cd ..
-              cd acp-compiler && poetry install --no-interaction && cd ..
-              cd acp-mcp && poetry install --no-interaction && cd ..
-              ;;
-            acp-cli)
-              cd acp-schema && poetry install --no-interaction && cd ..
-              cd acp-compiler && poetry install --no-interaction && cd ..
-              cd acp-mcp && poetry install --no-interaction && cd ..
-              cd acp-runtime && poetry install --no-interaction && cd ..
-              ;;
-          esac
-
-      - name: Build package
-        run: |
-          PACKAGE="${{ steps.parse-tag.outputs.package }}"
-          cd "$PACKAGE"
-          poetry build
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: ${{ steps.parse-tag.outputs.package }}/dist/
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.parse-tag.outputs.tag }}
-          name: ${{ steps.parse-tag.outputs.package }} v${{ steps.parse-tag.outputs.version }}
+          tag_name: ${{ steps.version.outputs.tag }}
+          name: acp-cli v${{ steps.version.outputs.version }}
           generate_release_notes: true
-          files: |
-            ${{ steps.parse-tag.outputs.package }}/dist/*
-
+          draft: false
+          prerelease: ${{ contains(steps.version.outputs.version, '-') }}
