--- a/acp-compiler/pyproject.toml
+++ b/acp-compiler/pyproject.toml
@@ -32,6 +32,7 @@ pytest-asyncio = "^0.24"
 pytest-cov = "^4.1"
 ruff = "^0.8"
 mypy = "^1.8"
+types-PyYAML = "^6.0"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
