Update README and ACP CLI for native schema support
- Revised README to reflect the transition from YAML to ACP native schema, enhancing clarity on agent definitions and workflows.
- Updated CLI commands to exclusively support .acp files, removing YAML format handling for compilation, validation, and execution.
- Improved documentation and help messages to emphasize the new .acp specification format and its benefits.
- Streamlined code by removing legacy YAML handling functions and enhancing error messages for unsupported file types.

--- a/acp-compiler/pyproject.toml
+++ b/acp-compiler/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "acp-compiler"
 version = "0.0.1"
-description = "YAML compilation and validation for ACP"
+description = "ACP native schema compilation and validation"
 authors = ["ACP Team"]
 readme = "README.md"
 license = "MIT"
