Update license from MIT to Apache 2.0 across all components
- Replaced the MIT License with the Apache License 2.0 in the LICENSE file.
- Updated README.md to reflect the new license information.
- Changed license specifications in pyproject.toml files for acp-cli, acp-compiler, acp-mcp, acp-runtime, and acp-schema to Apache-2.0.
- Adjusted license badge in README.md to indicate Apache License 2.0.

--- a/acp-mcp/pyproject.toml
+++ b/acp-mcp/pyproject.toml
@@ -4,12 +4,12 @@ version = "0.0.2"
 description = "MCP server integration for ACP"
 authors = ["ACP Team"]
 readme = "README.md"
-license = "MIT"
+license = "Apache-2.0"
 packages = [{include = "acp_mcp"}]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
