Enhance GitHub Actions workflow for version bumping (#30)
- Added a step to generate a GitHub App token to bypass branch protection, improving the workflow's ability to manage version bumps.
- Updated the checkout step to use the generated token instead of the default GitHub token for better access control.
- Changed the Git configuration to use "acp-version-bot" for commits made by the workflow, ensuring clearer attribution.

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -26,11 +26,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Generate a token from the GitHub App to bypass branch protection
+      - name: Generate GitHub App Token
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Check for skip conditions (PR merge)
         if: github.event_name == 'pull_request'
@@ -99,8 +107,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "acp-version-bot[bot]"
+          git config user.email "acp-version-bot[bot]@users.noreply.github.com"
 
       - name: Run version bump script
         id: bump
