Refactor code for improved readability and consistency
- Simplified example code formatting in `acp_api/client.py` for better clarity.
- Streamlined test cases in `test_client.py` by removing unnecessary line breaks.
- Added warning filter configuration in `pyproject.toml` to suppress RuntimeWarnings.
- Updated parameter handling in `ir_generator.py` to use type-based access for improved clarity.

--- a/acp-cli/pyproject.toml
+++ b/acp-cli/pyproject.toml
@@ -56,6 +56,11 @@ pytest-cov = "^4.1"
 ruff = "^0.8"
 mypy = "^1.8"
 
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::RuntimeWarning",
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
