--- a/acp-api/pyproject.toml
+++ b/acp-api/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "acp-cli"
-version = "0.0.803"
-description = "CLI interface for ACP"
+name = "acp-api"
+version = "0.0.801"
+description = "Python SDK for programmatic ACP usage"
 authors = ["ACP Team"]
 readme = "README.md"
 license = "Apache-2.0"
-packages = [{include = "acp_cli"}]
+packages = [{include = "acp_api"}]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -19,37 +19,13 @@ classifiers = [
 "Homepage" = "https://github.com/acp-team/acp"
 "Repository" = "https://github.com/acp-team/acp"
 
-[tool.poetry.scripts]
-acp = "acp_cli.main:app"
-
-# Note: For local development, use path dependencies via poetry install in the root
-# The CI workflow bundles all modules into acp_cli/ before publishing
-
 [tool.poetry.dependencies]
 python = "^3.11"
-# CLI dependencies
-typer = ">=0.12,<1.0"
-rich = "^13.7"
-structlog = "^24.1.0"
-# From acp-schema
-pydantic = "^2.5"
-pyyaml = "^6.0"
-# From acp-compiler
-lark = "^1.1"
-# From acp-mcp
-anyio = "^4.2"
-# From acp-runtime
-langchain = "^0.3"
-langchain-openai = "^0.3"
-langchain-anthropic = "^0.3"
-
-[tool.poetry.group.dev.dependencies]
-# Path dependencies for local development
 acp-schema = {path = "../acp-schema", develop = true}
-acp-mcp = {path = "../acp-mcp", develop = true}
 acp-compiler = {path = "../acp-compiler", develop = true}
 acp-runtime = {path = "../acp-runtime", develop = true}
-# Test and lint dependencies
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
 pytest-asyncio = "^0.24"
 pytest-cov = "^4.1"
@@ -57,9 +33,8 @@ ruff = "^0.8"
 mypy = "^1.8"
 
 [tool.pytest.ini_options]
-filterwarnings = [
-    "ignore::RuntimeWarning",
-]
+testpaths = ["tests"]
+asyncio_mode = "auto"
 
 [build-system]
 requires = ["poetry-core"]
