Acp api lib (#33)
* Add Python API section to examples README

- Introduced a new section detailing the usage of ACP workflows programmatically from Python applications.
- Included prerequisites, features, and use cases for the `acp-api` package.
- Provided example commands for running basic usage, context management, error handling, and FastAPI integration.
- Enhanced overall documentation clarity for users interested in Python integration.

* Refactor code for improved readability and consistency

- Simplified example code formatting in `acp_api/client.py` for better clarity.
- Streamlined test cases in `test_client.py` by removing unnecessary line breaks.
- Added warning filter configuration in `pyproject.toml` to suppress RuntimeWarnings.
- Updated parameter handling in `ir_generator.py` to use type-based access for improved clarity.

* Refactor imports in ACP client and test files for improved organization

- Removed redundant import statements in `acp_api/client.py` to streamline the code.
- Cleaned up import statements in `test_client.py` for better readability and consistency.

--- a/acp-cli/pyproject.toml
+++ b/acp-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "acp-cli"
-version = "0.0.803"
+version = "0.0.804"
 description = "CLI interface for ACP"
 authors = ["ACP Team"]
 readme = "README.md"
@@ -55,6 +55,11 @@ pytest-asyncio = "^0.24"
 pytest-cov = "^4.1"
 ruff = "^0.8"
 mypy = "^1.8"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::RuntimeWarning",
+]
 
 [build-system]
 requires = ["poetry-core"]
