--- a/acp-api/pyproject.toml
+++ b/acp-api/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "acp-schema"
-version = "0.0.804"
-description = "Core data models and YAML schemas for ACP"
+name = "acp-api"
+version = "0.0.801"
+description = "Python SDK for programmatic ACP usage"
 authors = ["ACP Team"]
 readme = "README.md"
 license = "Apache-2.0"
-packages = [{include = "acp_schema"}]
+packages = [{include = "acp_api"}]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -21,14 +21,15 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "^2.5"
-pyyaml = "^6.0"
+acp-schema = {path = "../acp-schema", develop = true}
+acp-compiler = {path = "../acp-compiler", develop = true}
+acp-runtime = {path = "../acp-runtime", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
-pytest-asyncio = "^1.3"
-pytest-cov = "^7.0"
-ruff = "^0.14"
+pytest-asyncio = "^0.24"
+pytest-cov = "^4.1"
+ruff = "^0.8"
 mypy = "^1.8"
 
 [tool.pytest.ini_options]
@@ -38,4 +39,3 @@ asyncio_mode = "auto"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
