Refactor README to remove trademark symbol from "Agentform™" and upda… (#42)
* Refactor README to remove trademark symbol from "Agentform™" and update related documentation for consistency.

* Update CI workflow to include development dependencies during package installation

* Update CI workflow to conditionally install dependencies for agentform-cli only

* Refactor CI workflow to simplify dependency installation conditions for agentform packages

* Update CI workflow to version the cache keys and expand dependency installation conditions for agentform packages

* Update CI workflow to remove Python 3.11 from the matrix, now only using Python 3.12

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.12"]
         package:
           - agentform-schema
           - agentform-compiler
@@ -105,28 +105,28 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ matrix.package }}/.venv
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.package }}-${{ hashFiles(format('{0}/poetry.lock', matrix.package)) }}
+          key: venv-v2-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.package }}-${{ hashFiles(format('{0}/poetry.lock', matrix.package)) }}
           restore-keys: |
-            venv-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.package }}-
+            venv-v2-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.package }}-
 
       - name: Install dependencies for agentform-schema
         if: matrix.package != 'agentform-schema'
         run: cd agentform-schema && poetry install --no-interaction
 
       - name: Install dependencies for agentform-compiler
-        if: matrix.package == 'agentform-compiler' || matrix.package == 'agentform-runtime' || matrix.package == 'agentform-cli'
+        if: matrix.package == 'agentform-runtime' || matrix.package == 'agentform-cli'
         run: cd agentform-compiler && poetry install --no-interaction
 
       - name: Install dependencies for agentform-mcp
-        if: matrix.package == 'agentform-mcp' || matrix.package == 'agentform-runtime' || matrix.package == 'agentform-cli'
+        if: matrix.package == 'agentform-compiler' || matrix.package == 'agentform-runtime' || matrix.package == 'agentform-cli'
         run: cd agentform-mcp && poetry install --no-interaction
 
       - name: Install dependencies for agentform-runtime
-        if: matrix.package == 'agentform-runtime' || matrix.package == 'agentform-cli'
+        if: matrix.package == 'agentform-cli'
         run: cd agentform-runtime && poetry install --no-interaction
 
       - name: Install package dependencies
-        run: cd ${{ matrix.package }} && poetry install --no-interaction
+        run: cd ${{ matrix.package }} && poetry install --no-interaction --with dev
 
       - name: Run tests with coverage
         run: |
