--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,6 +6,9 @@ github: [metadata]
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
+# Permalinks
+permalink: pretty
+
 # Build settings
 markdown: kramdown
 highlighter: rouge
