Update Gemfile and CSS styles for improved compatibility and aesthetics
- Removed version constraint for jekyll-sitemap in Gemfile to allow for the latest version.
- Adjusted padding and box-shadow properties in style.css for better visual consistency.
- Added pointer-events: none to code blocks to prevent hover effects, enhancing user experience.

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -4,4 +4,4 @@ gem "jekyll", "~> 4.3"
 
 # GitHub Pages compatible plugins
 gem "jekyll-feed", "~> 0.17"
-gem "jekyll-sitemap", "~> 1.5"
+gem "jekyll-sitemap"
